# serializer version: 1
# name: test_binary_sensor[binary_sensor.ctd_000001-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.ctd_000001',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <BinarySensorDeviceClass.CONNECTIVITY: 'connectivity'>,
    'original_icon': None,
    'original_name': None,
    'platform': 'qbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'ctd_000001_connected',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.ctd_000001-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'connectivity',
      'friendly_name': 'CTD 000001',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.ctd_000001',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor[binary_sensor.weersensor_raining-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.weersensor_raining',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Raining',
    'platform': 'qbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'raining',
    'unique_id': 'ctd_000001_21007_raining',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.weersensor_raining-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Weersensor Raining',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.weersensor_raining',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensor[binary_sensor.weersensor_twilight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.weersensor_twilight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Twilight',
    'platform': 'qbus',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'twilight',
    'unique_id': 'ctd_000001_21007_twilight',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensor[binary_sensor.weersensor_twilight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Weersensor Twilight',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.weersensor_twilight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
